--- a/src/purecss.module.css
+++ b/src/purecss.module.css
@@ -7,6 +7,7 @@
   position: relative;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+  margin-top: 8rem;
 } 
 .loader::after {
   content: '';  
